--- a/python_scrape/jobs_explore.ipynb
+++ b/python_scrape/jobs_explore.ipynb
@@ -623,253 +623,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jobs['yearly'] = jobs['pay']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert anything in the yearly column that isnt yearly to 'N/A'\n",
-    "jobs.loc[~jobs['yearly'].str.contains('a year'), 'yearly'] = 'N/A' "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>role</th>\n",
-       "      <th>company</th>\n",
-       "      <th>location</th>\n",
-       "      <th>pay</th>\n",
-       "      <th>remote</th>\n",
-       "      <th>details</th>\n",
-       "      <th>job_post_age</th>\n",
-       "      <th>search_field</th>\n",
-       "      <th>yearly</th>\n",
-       "      <th>floor_pay_yearly</th>\n",
-       "      <th>ceiling_pay_yearly</th>\n",
-       "      <th>monthly</th>\n",
-       "      <th>hourly</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lead Software Engineer - eCommerce</td>\n",
-       "      <td>COVETRUS INC</td>\n",
-       "      <td>Birmingham, AL 35203</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Our advanced web tools, client marketing progr...</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Marketing Technologist</td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Associate Director of UAA Student Web Experience</td>\n",
-       "      <td>University of Alaska</td>\n",
-       "      <td>Anchorage, AK 99508 (Rogers Park area)</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Produces clear documentation for marketing pag...</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Marketing Technologist</td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sales Support, Coronary Clinical Specialist - ...</td>\n",
-       "      <td>Philips</td>\n",
-       "      <td>Tucson, AZ</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Supports marketing related trade shows and ven...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Marketing Technologist</td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Laboratory Operations Manager</td>\n",
-       "      <td>Lighthouse Lab Services</td>\n",
-       "      <td>Phoenix, AZ 85016 (Camelback East area)</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Work with hospital strategy department and mar...</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Marketing Technologist</td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Snr Key Account Technology Engineer I - EPI</td>\n",
-       "      <td>ASM</td>\n",
-       "      <td>Phoenix, AZ</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Related work experience can include process en...</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Marketing Technologist</td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                role                  company  \\\n",
-       "0                 Lead Software Engineer - eCommerce             COVETRUS INC   \n",
-       "1   Associate Director of UAA Student Web Experience     University of Alaska   \n",
-       "2  Sales Support, Coronary Clinical Specialist - ...                  Philips   \n",
-       "3                      Laboratory Operations Manager  Lighthouse Lab Services   \n",
-       "4        Snr Key Account Technology Engineer I - EPI                      ASM   \n",
-       "\n",
-       "                                  location  pay  remote  \\\n",
-       "0                     Birmingham, AL 35203  N/A       0   \n",
-       "1   Anchorage, AK 99508 (Rogers Park area)  N/A       0   \n",
-       "2                               Tucson, AZ  N/A       0   \n",
-       "3  Phoenix, AZ 85016 (Camelback East area)  N/A       0   \n",
-       "4                              Phoenix, AZ  N/A       0   \n",
-       "\n",
-       "                                             details  job_post_age  \\\n",
-       "0  Our advanced web tools, client marketing progr...            30   \n",
-       "1  Produces clear documentation for marketing pag...            30   \n",
-       "2  Supports marketing related trade shows and ven...             7   \n",
-       "3  Work with hospital strategy department and mar...            13   \n",
-       "4  Related work experience can include process en...            30   \n",
-       "\n",
-       "             search_field yearly  floor_pay_yearly  ceiling_pay_yearly  \\\n",
-       "0  Marketing Technologist                      NaN                 NaN   \n",
-       "1  Marketing Technologist                      NaN                 NaN   \n",
-       "2  Marketing Technologist                      NaN                 NaN   \n",
-       "3  Marketing Technologist                      NaN                 NaN   \n",
-       "4  Marketing Technologist                      NaN                 NaN   \n",
-       "\n",
-       "  monthly hourly  \n",
-       "0     NaN    NaN  \n",
-       "1     NaN    NaN  \n",
-       "2     NaN    NaN  \n",
-       "3     NaN    NaN  \n",
-       "4     NaN    NaN  "
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# remove 'a year' from yearly column\n",
-    "jobs['yearly'] = jobs['yearly'].str.replace('[^0-9\\-]', '')\n",
-    "jobs.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jobs['floor_pay_yearly'] = jobs['yearly'].str.replace('\\-\\d+', '')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jobs.loc[jobs['floor_pay_yearly'] == '', 'floor_pay_yearly'] = np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jobs['floor_pay_yearly'] = jobs['floor_pay_yearly'].astype(float)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
+    "jobs['yearly'] = jobs['pay']\n",
+    "\n",
+    "# convert anything in the yearly column that isnt yearly to 'N/A'\n",
+    "jobs.loc[~jobs['yearly'].str.contains('a year'), 'yearly'] = 'N/A' \n",
+    "\n",
+    "# remove 'a year' from yearly column\n",
+    "jobs['yearly'] = jobs['yearly'].str.replace('[^0-9\\-]', '')\n",
+    "\n",
+    "# create floor pay column\n",
+    "jobs['floor_pay_yearly'] = jobs['yearly'].str.replace('\\-\\d+', '')\n",
+    "jobs.loc[jobs['floor_pay_yearly'] == '', 'floor_pay_yearly'] = np.nan\n",
+    "jobs['floor_pay_yearly'] = jobs['floor_pay_yearly'].astype(float)\n",
+    "\n",
+    "# create ceiling pay column\n",
     "jobs['ceiling_pay_yearly'] = jobs['yearly'].str.replace('\\d+\\-', '')\n",
     "jobs.loc[jobs['ceiling_pay_yearly'] == '', 'ceiling_pay_yearly'] = np.nan\n",
     "jobs['ceiling_pay_yearly'] = jobs['ceiling_pay_yearly'].astype(float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "96209.16738660907"
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "jobs['ceiling_pay_yearly'].mean()"
    ]
   },
   {
