adds log transformed averages

--- a/python_scrape/jobs_explore.ipynb
+++ b/python_scrape/jobs_explore.ipynb
@@ -1699,10 +1699,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 260,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Pay Floor (Log Transformed): $61381.40588207277\n",
+      "Average Pay Ceiling (Log Transformed): $77564.08024571718\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average Pay Floor (Log Transformed): ${np.expm1(floor.mean())}\")\n",
+    "print(f\"Average Pay Ceiling (Log Transformed): ${np.expm1(ceiling.mean())}\")"
+   ]
   }
  ],
  "metadata": {
