adds new dataframe subset

--- a/python_scrape/jobs_explore.ipynb
+++ b/python_scrape/jobs_explore.ipynb
@@ -1701,55 +1701,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For the map, you'll need geopandas\n",
-    "\n",
-    "# THIS IS JUST A PLOTLY SAMPLE\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/2014_us_cities.csv')\n",
-    "df.head()\n",
-    "\n",
-    "df['text'] = df['name'] + '<br>Population ' + (df['pop']/1e6).astype(str)+' million'\n",
-    "limits = [(0,2),(3,10),(11,20),(21,50),(50,3000)]\n",
-    "colors = [\"royalblue\",\"crimson\",\"lightseagreen\",\"orange\",\"lightgrey\"]\n",
-    "cities = []\n",
-    "scale = 5000\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "\n",
-    "for i in range(len(limits)):\n",
-    "    lim = limits[i]\n",
-    "    df_sub = df[lim[0]:lim[1]]\n",
-    "    fig.add_trace(go.Scattergeo(\n",
-    "        locationmode = 'USA-states',\n",
-    "        lon = df_sub['lon'],\n",
-    "        lat = df_sub['lat'],\n",
-    "        text = df_sub['text'],\n",
-    "        marker = dict(\n",
-    "            size = df_sub['pop']/scale,\n",
-    "            color = colors[i],\n",
-    "            line_color='rgb(40,40,40)',\n",
-    "            line_width=0.5,\n",
-    "            sizemode = 'area'\n",
-    "        ),\n",
-    "        name = '{0} - {1}'.format(lim[0],lim[1])))\n",
-    "\n",
-    "fig.update_layout(\n",
-    "        title_text = '2014 US city populations<br>(Click legend to toggle traces)',\n",
-    "        showlegend = True,\n",
-    "        geo = dict(\n",
-    "            scope = 'usa',\n",
-    "            landcolor = 'rgb(217, 217, 217)',\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [],
@@ -1795,6 +1746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dictionary mostly from https://gist.github.com/rogerallen/1583593\n",
     "us_state_abbrev = {\n",
     "    'Alabama': 'AL',\n",
     "    'Alaska': 'AK',\n",
@@ -1872,11 +1824,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
     "jobs_geo = jobs.merge(geo, on=['city', 'state_id'], how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "New York, NY         3056\n",
+       "Chicago, IL          1689\n",
+       "Austin, TX           1415\n",
+       "San Francisco, CA    1311\n",
+       "Atlanta, GA          1310\n",
+       "                     ... \n",
+       "Alliance, OH            1\n",
+       "Center, TX              1\n",
+       "Holbrook, AZ            1\n",
+       "Herkimer, NY            1\n",
+       "Leesburg, FL            1\n",
+       "Name: location_label, Length: 3558, dtype: int64"
+      ]
+     },
+     "execution_count": 434,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs_geo['location_label'] = jobs_geo['city'] + ', ' + jobs_geo['state_id']\n",
+    "jobs_geo['location_label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_labels = jobs_geo[jobs_geo['lat'].notnull()]['location_label'].value_counts().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1415, 38)"
+      ]
+     },
+     "execution_count": 442,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs_geo[jobs_geo['location_label'] == \"Austin, TX\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# THIS IS JUST A PLOTLY SAMPLE\n",
+    "\n",
+    "scale = 5000\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "for i in range(len(loc_labels)):\n",
+    "    quantity = \n",
+    "    fig.add_trace(go.Scattergeo(\n",
+    "        locationmode = 'USA-states',\n",
+    "        lon = df_sub['lon'],\n",
+    "        lat = df_sub['lat'],\n",
+    "        text = df_sub['text'],\n",
+    "        marker = dict(\n",
+    "            size = df_sub['pop']/scale,\n",
+    "            color = colors[i],\n",
+    "            line_color='rgb(40,40,40)',\n",
+    "            line_width=0.5,\n",
+    "            sizemode = 'area'\n",
+    "        ),\n",
+    "        name = '{0} - {1}'.format(lim[0],lim[1])))\n",
+    "\n",
+    "fig.update_layout(\n",
+    "        title_text = '2014 US city populations<br>(Click legend to toggle traces)',\n",
+    "        showlegend = True,\n",
+    "        geo = dict(\n",
+    "            scope = 'usa',\n",
+    "            landcolor = 'rgb(217, 217, 217)',\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "fig.show()"
    ]
   }
  ],
